2002-03-26  wakaba <w@suika.fam.cx>

	* Entity.pm: Adds User-Agent: value when stringify.
	(ua_field_name, ua_use_config): New options.
	(add_ua): New option.
	(_add_ua): New proceder.

2002-03-25  wakaba <w@suika.fam.cx>

	* MIME/: New directory.
	* Util.pm: New module.
	* Entity.pm, Header.pm (parse_all): New option.
	(hook_encode_string, hook_decode_string): Likewise.

2002-03-23  wakaba <w@suika.fam.cx>

	* Header.pm: Supports Message::Field::CSV,
	Message::Field::ValueParams, Message::Field::ContentType,
	Message::Field::ContentDisposition.

2002-03-21  wakaba <w@suika.fam.cx>

	* Body/: New directory.

2002-03-16  wakaba <w@suika.fam.cx>

	* Header.pm: Use Message::Field::Date.

2002-03-13  wakaba <w@suika.fam.cx>

	* Header.pm: New module.
	* Entity.pm: Likewise.
	
	* ChangeLog: New file.