@@ -1,3 +1,8 @@
+2002-03-27  wakaba <w@suika.fam.cx>
+
+	* Fix bug of treatment of FWS sorounding encoded-word.
+	(MIME/EncodedWord.pm and related modules.)
+
 2002-03-26  wakaba <w@suika.fam.cx>
 
 	* Entity.pm: Adds User-Agent: value when stringify.
